[project]
name = "thissentencedoesnotexist"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "carterwward", email = "Carter.Ward@uvm.edu"},
]
dependencies = ["litestar>=2.21.1", "psycopg2-binary>=2.9.11", "pydantic>=2.12.5", "sqlalchemy>=2.0.48", "uvicorn>=0.49.0", "asyncpg>=0.31.0", "python-dotenv>=1.2.2"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
